[package]
name = "jolt-node"
version = "0.1.0"
edition = "2021"


[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["ws", "rustls", "abigen"] }
tokio = { version = "1", features = ["full"] }
eyre = "0.6.7"
serde_json = "1.0.79"
clap = "3.1.6"

[profile.release]
strip = true